<package>
  <name>turtlebot_actions</name>
  <description>

     turtlebot_actions provides several basic actionlib actions for the TurtleBot.

  </description>
  <version>2.1.0</version>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <author>Helen Oleynikova, Melonee Wise</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/turtlebot_actions</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


