<package>
  <name>turtlebot_calibration</name>
  <description>

     turtlebot_calibration

  </description>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <author>Wim Meeussen</author>
  <license>BSD</license>
  <version>2.1.0</version>
  <url>http://ros.org/wiki/turtlebot_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>turtlebot_bringup</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>turtlebot_bringup</run_depend>


</package>
