<package>
  <name>turtlebot_navigation</name>
  <description>

     turtlebot_navigation

  </description>
  <author>Tully Foote</author>
  <license>BSD</license>
  <version>2.1.0</version>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <url>http://ros.org/wiki/turtlebot_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>tf</run_depend>

</package>


