<?xml version="1.0"?>
<package>
  <name>turtlebot_rgbdslam</name>
  <version>0.0.0</version>
  <description>The turtlebot_rgbdslam package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/turtlebot_rgbdslam</url> -->
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>octomap</run_depend>
  <run_depend>roscpp</run_depend>
</package>
