<package>
        <name>pano_ros</name>
	<description>

	The ros frontend to the pano subsystem.

        </description>
        <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
	<author>Jihoon Lee</author>
	<license>BSD</license>
        <version>2.1.0</version>
	<url>http://ros.org/wiki/pano_ros</url>


        <buildtool_depend>catkin</buildtool_depend>

        <build_depend>roscpp</build_depend>
        <build_depend>rospy</build_depend>
        <build_depend>std_msgs</build_depend>
        <build_depend>sensor_msgs</build_depend>
        <build_depend>actionlib</build_depend>
        <build_depend>actionlib_msgs</build_depend>
        <build_depend>image_transport</build_depend>
        <build_depend>cv_bridge</build_depend>
        <build_depend>pano_py</build_depend>
        <build_depend>message_generation</build_depend>

        <run_depend>roscpp</run_depend>
        <run_depend>rospy</run_depend>
        <run_depend>std_msgs</run_depend>
        <run_depend>sensor_msgs</run_depend>
        <run_depend>actionlib</run_depend>
        <run_depend>actionlib_msgs</run_depend>
        <run_depend>image_transport</run_depend>
        <run_depend>cv_bridge</run_depend>
        <run_depend>pano_py</run_depend>
        <run_depend>message_runtime</run_depend>

</package>


